# objgen

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  vsbuild_x64.bat  vsbuild_x86.bat
cmake/: binaries.cmake  external.cmake
libobjgen/: CMakeLists.txt
tools/: CMakeLists.txt
